--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ h3 {
     margin: 4px 0px;
 }
 
-img {
+/* img {
     margin-top: 10px;
-}
+} */
 
 .heading p {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 input {
@@ -39,7 +39,7 @@ a {
 
 .not-yours {
     color: #5f6368;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 400;
 }
 
@@ -53,7 +53,7 @@ a {
 }
 
 .wrapper {
-    width: 500px;
+    width: 450px;
     border: 1px solid #dadada;
     border-radius: 8px;
     padding: 40px 36px;
@@ -74,7 +74,7 @@ a {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 35px;
 }
 
 .btn-group {
